# streamlit_lab

./: dados_aleatorios.csv  dados_exercicio.csv  pyproject.toml
pages/aula01/: 01.py  02.py
pages/aula02/: 01.py  02.py  03.py
pages/aula03/: 01.py  02.py
pages/aula04/: 01.py  02.py  03.py
pages/aula05/: 01.py
pages/aula06/: 01.py
pages/aula07/: 01.py
pages/aula07/.streamlit/: config.toml
pages/aula08/: aula_08.py  requirements.txt
pages/aula09/: 01.py
pages/aula10/: 01.py
pages/aula10/pages/: analise_dados.py  pagina_inicial.py
pages/aula10/utils/: carregar_dados.py
pages/aula11/: streamlit_app.py
pages/aula11/pages/: home.py  pag2.py  pag3.py
pages/aula12/: juntar_pdf.py  obter_pdfs.py  streamlit_app.py
pages/aula12/pages/: pdf_merger.py  visualizador_pdf.py
pages/aula13/: aula_original.py  streamlit_app.py
pages/aula14/: streamlit_app.py
pages/aula15/: aula15_original.py  streamlit_app.py
pages/aula16/: streamlit_app.py
