[project]
name = "streamlit-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "henriquerowan",email = "henriquerowan@yahoo.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit[pdf] (>=1.57.0,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "pypdf (>=6.11.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "streamlit_lab", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
